# story-studio

./: .gitattributes  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  native_pack.rs
src-tauri/src/commands/: comfyui.rs  diagnostics.rs  files.rs  generation.rs  media_probe.rs  mod.rs  pack.rs  piper.rs  podcast.rs  session.rs  xtts.rs  youtube.rs
src-tauri/src/domain/: mod.rs  project.rs  validation.rs
src-tauri/src/native_pack/: canonical.rs  document.rs  fidelity_judge.rs  mod.rs  preallocate.rs  stats.rs  tests.rs  writer.rs
src-tauri/src/native_pack/assets/: audio.rs  image.rs  mod.rs  pipeline.rs  zip_bundle.rs
src-tauri/src/native_pack/builder/: after_playback.rs  core.rs  imported_zip.rs  menu.rs  menu_branch.rs  mod.rs  night_mode.rs  refs.rs  returns.rs  root.rs  story.rs  story_branch.rs  transitions.rs
src-tauri/src/native_pack/tests/: after_playback_next_story.rs  compat.rs  document_builder.rs  fidelity.rs  names_and_assets.rs  night_mode.rs  root_and_imports.rs  roundtrip.rs
src-tauri/src/services/: comfyui.rs  mod.rs  pack_reader.rs  podcast.rs  project_files.rs  xtts.rs
src-tauri/src/support/: archive_limits.rs  ffmpeg.rs  fs_pack_reader.rs  imported_pack.rs  lunii_zip_validator.rs  mod.rs  network.rs  paths.rs  temp.rs
(+587 files in other folders)
